# dockcron

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: push_image.yml  release.yml  release_build_binary.yml  release_push_image.yml
src/: cli.rs  job.rs  main.rs
