[package]
name = "dockcron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bollard = { version = "0.19", features = ["ssl"] }
chrono = { version = "0.4", features = ["clock"] }
cron = "0.15"
futures = "0.3"
humantime = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shlex = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
