[package]
name = "dockcron"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bollard = { version = "0.20.0", features = ["ssl"] }
chrono = { version = "0.4.42", features = ["clock"] }
cron = "0.15.0"
futures = "0.3.31"
humantime = "2.3.0"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
shlex = "1.3.0"
clap = { version = "4.5.54", features = ["derive", "env"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
